fixed finish section alignment

--- a/styles/game.css
+++ b/styles/game.css
@@ -1,9 +1,10 @@
 body {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 27vh;
     justify-content: center;
     align-items: center;
+    justify-content: space-around;
 }
 .input-group {
     display: flex;
@@ -13,8 +14,7 @@ body {
 .cells{
     display: flex;
     flex-direction: row;
-    width: 200px;
-    height: 30px;
+    width: 200px;   
     justify-content: space-around;    
 }
 
